# API.Whisper

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  runserver.py  sonar-project.properties
.github/workflows/: ci.yml
apiwhisper/: api.py
src/: runserver.py
src/adapters/grpc/: grpc_server.py
src/adapters/grpc/pb/: auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  health_pb2.py  health_pb2.pyi  health_pb2_grpc.py  transcribe_pb2.py  transcribe_pb2.pyi  transcribe_pb2_grpc.py
src/adapters/grpc/protos/: auth.proto  health.proto  transcribe.proto
src/adapters/grpc/services/: auth_grpc_service.py  auth_service.py  health_grpc_service.py  health_service.py  transcribe_grpc_service.py  transcribe_service.py
src/adapters/rest/: fast_api.py  rest_server.py
src/adapters/rest/dependencies/: validate_x_token_dependency.py
src/adapters/rest/middlewares/: process_time_middleware.py
src/adapters/rest/routers/: auth_router.py  transcribe_router.py
src/api/: fast_api.py
src/api/dependencies/: validate_token_dependency.py  validate_x_token_dependency.py
src/api/dtos/: login_request_dto.py  login_response_dto.py  transcribe_response_dto.py
src/api/middlewares/: process_time_middleware.py
src/api/routers/: auth_router.py  health_router.py  login_router.py  transcribe_router.py
src/application/exceptions/: file_service_exceptions.py
src/application/services/: auth_service.py  file_service.py  transcribe_service.py
src/core/: container.py  headers.py  settings.py  whisper_models.py
src/data/repositories/: token_repository.py  whisper_model_repository.py
src/domain/exceptions/: file_service_exceptions.py  whisper_service_exceptions.py
src/domain/services/: auth_service.py  file_service.py  token_service.py  user_service.py  whisper_service.py
tests/adapters/rest/routers/: test_health_router.py
tests/api/routers/: test_health_router.py
tests/application/services/: test_file_service.py  test_transcribe_service.py
tests/core/: test_headers.py  test_settings.py  test_whisper_models.py
tests/data/repositories/: test_token_repository.py  test_whisper_model_repository.py
tests/domain/services/: test_auth_service.py  test_file_service.py  test_whisper_service.py
